kubernetes/main/apps/monitoring/blackbox-exporter/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.18b.haus/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blackbox-exporter
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - blackbox-exporter.18b.haus
  rules:
    - backendRefs:
        - name: blackbox-exporter
          port: 9115
